# crossfit-health-os

./: .env  .env.example  .gitignore  AI_MODEL_ANALYSIS.md  AI_PROGRAMMING_GUIDE.md  BUG_FIX_SUMMARY.md  BUG_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  EVALUATION.md  FIXES_APPLIED.md  FORM_VALIDATION.md  FRONTEND_GUIDE.md  FRONTEND_PYTHON.md  HIGH_PRIORITY_FIXES.md  IMPLEMENTATION_GUIDE.md  LOW_PRIORITY_FIXES.md  MEDIUM_PRIORITY_FIXES.md  PHASE1_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md  SUBAGENT_COMPLETION_REPORT.md  TESTING_CHECKLIST.md  TEST_REPORT.md  WEEKLY_SCHEDULE_GUIDE.md  docker-compose.yml
backend/: DATABASE.md  Dockerfile  alembic.ini  requirements.txt  run_adapter.py
backend/cfai/: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/cfai/src/cfai/: __init__.py  athlete.py  composer_hybrid.py  composer_llm.py  cost_tracker.py  evaluation.py  evaluation_judge.py  evaluation_longitudinal.py  examples.py  history.py  llm_providers.py  mesocycle_planner.py  movements.py  movements_seed.py  percent_table.py  programmer.py  results.py  session_builder.py  workout_schema.py
backend/cfai/tests/: analyze_unsloth_results.py  compare_composers.py  demo_history.py  demo_programmer.py  eval_demo.py  inspect_hybrid_inol.py  multi_judge.py  run_mesocycle.py  run_mesocycle_multi.py  run_test_set.py  run_unsloth_composer.py  run_variance.py  smoke_composers.py  smoke_judges.py  test_evaluation.py  validate_library.py
backend/cfai/tests/fixtures/: mesocycle_scenarios.json  test_contexts.json
e2e-tests/: .env.example  .gitignore  README.md  (+3 more)
(+183 files in other folders)
